--- a/src/pages/ Registration/Registration.module.css
+++ b/src/pages/ Registration/Registration.module.css
@@ -5,6 +5,9 @@ body{
 a{
     text-decoration: none;
 }
+button:hover, .add_profile_img img:hover{
+    cursor: pointer;
+}
 .form_blank a{
     margin: 8px 0;
 }
@@ -77,7 +80,7 @@ a{
 .form_blank p:last-child {
     display: inline;
 }
-.form_blank input{
+.form_blank input, .form_blank select{
     font-family: 'Roboto';
     padding-left: 16px;
     font-weight: 400;
@@ -137,4 +140,17 @@ form div{
     opacity: 0.2;
     margin-top: 16px;
     border-radius: 8px;
+}
+
+.add_profile_img{
+    display: flex;
+    width: 100%;
+    margin: 4px 0!important;
+
+}
+
+.add_profile_img span{
+    color: #2E2E2E!important;
+    opacity: 0.5;
+    margin-left: 9px;
 }
